# HolmMHD

./: COPYING  LICENSE  Makefile  README  configure  configure.ac
src/: BField.f90  HolmMHD.f90  Makefile.am  Makefile.in  divF.f90  globals.h  initialise.f90  mpi_routines.f90  output.f90  parameters.f90  wvel.f90
